feat: add unit test for tools (#55)

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:service-logs": "node test/test-service-logs.js",
     "test:gcp-auth": "node test/test-gcp-auth.js",
     "test:prompts": "node --test test/test-prompts.js",
+    "test:tools": "node --test test/test-tools.js",
     "test": "node test/run-all-tests.js",
     "start": "node mcp-server.js"
   },
@@ -46,5 +47,8 @@
     "express": "^5.1.0",
     "google-proto-files": "^5.0.0",
     "zod": "^3.25.76"
+  },
+  "devDependencies": {
+    "esmock": "^2.7.1"
   }
 }
