--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "cloud-run-mcp",
+  "name": "@google-cloud/cloud-run-mcp",
   "version": "1.0.0",
   "type": "module",
   "description": "Cloud Run MCP deployment tool",
   "main": "mcp-server.js",
-  "bin": "mcp-server.js",
+  "bin": {
+    "cloud-run-mcp": "mcp-server.js"
+  },
   "scripts": {
     "deploy": "gcloud run deploy cloud-run-mcp --source . --no-invoker-iam-check",
     "test:deploy": "node test/test-deploy.js",
